# ons-system

./: README.md  main.py  main_window.py  pyproject.toml
.github/workflows/: ci.yaml  python-app.yml
src/: main.py
src/table_generator/: table_generator.py
src/window/: main_window.py
tests/: test_table_generator.py
